# crew-agentcore

./: .gitignore  README.md  pyproject.toml  streamlitui.py  test_serper_minimal.py  thorough_test.py
src/vacation_planner/: crew.py  main.py
src/vacation_planner/config/: agents.yaml  tasks.yaml
