[project]
name = "vacation_planner"
version = "0.1.0"
description = "vacation_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.38.7",
    "crewai[tools]>=1.9.3",
    "streamlit>=1.50.0",
]

[project.scripts]
vacation_planner = "vacation_planner.main:run"
run_crew = "vacation_planner.main:run"
train = "vacation_planner.main:train"
replay = "vacation_planner.main:replay"
test = "vacation_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
